--- a/2.html
+++ b/2.html
@@ -7,12 +7,11 @@
     <h1><a href="index.html"></a>WEB</h1>
     <ol>
         <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html">C++</a></li>
+        <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
 
     <ul>
-        <li>park</li>
         <li>cho</li>
         <li>sam</li>
     </ul>
