--- a/3.html
+++ b/3.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8"> <!--한글깨질때 쓰는 tag-->
 </head>
 <body>
-    <h1><a href="index.html""></a>WEB</h1>
+    <h1><a href="index.html"></a>WEB</h1>
     <ol>
-        <li><a href="1.html"">HTML</a></li>
-        <li><a href="2.html"">CSS</a></li>
-        <li><a href="3.html"">JavaScript</a></li>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
     </ol>
 
     <ul>
