--- a/3.html
+++ b/3.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>WEB1 - html</title>
+    <title>WEB1 - JavaScript</title>
     <meta charset="utf-8"> <!--한글깨질때 쓰는 tag-->
 </head>
 <body>
