--- a/1.html
+++ b/1.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5GCGLM0339"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5GCGLM0339');
+</script>
     <title>WEB1 - html</title>
     <meta charset="utf-8"> <!--한글깨질때 쓰는 tag-->
 </head>
@@ -16,6 +25,7 @@
     </ul>
 
     <h3>HTML</h3>
+    <p><iframe width="560" height="315" src="https://www.youtube.com/embed/jSJM9iOiQ1g" frameborder="0" allowfullscreen></iframe></p>
     <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.
         Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. 
         HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
