--- a/3.html
+++ b/3.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5GCGLM0339"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5GCGLM0339');
+</script>
     <title>WEB1 - JavaScript</title>
     <meta charset="utf-8"> <!--한글깨질때 쓰는 tag-->
 </head>
