--- a/index.html
+++ b/index.html
@@ -11,14 +11,28 @@
 </script>
     <title>WEB1 - WelcomeDemo</title>
     <meta charset="utf-8"> <!--한글깨질때 쓰는 tag-->
+    <style> 
+        a {color: skyblue;
+        }
+    </style> <!--CSS쓰겠다는 html 태그: 이 안에선 CSS코드로 해석함 CSS를 한 곳에 몰아넣음으로써 정보만 볼수있다는 점, 중복 제거 등을 통한 효율 증대-->
 </head>
 <body>
-    <h1><a href="index.html">WEB</a></h1>
-    <ol>
+
+    <h1><a href="index.html">WEB</a></h1> 
+    <ol
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
+
+<!--web에 대한 정보가 없는 태그라서 웹페이지 정보가치 감소
+    <h1><a href="index.html"><font color="red">WEB</font></a></h1> 
+    <ol>
+        <li><a href="1.html"><font color="red">HTML</font></a></li>
+        <li><a href="2.html"><font color="red">CSS</font></a></li>
+        <li><a href="3.html"><font color="red">JavaScript</font></a></li>
+    </ol>
+-->
 
     <ul>
         <li>park</li>
