--- a/1.html
+++ b/1.html
@@ -11,6 +11,13 @@
 </script>
     <title>WEB1 - html</title>
     <meta charset="utf-8"> <!--한글깨질때 쓰는 tag-->
+    <style>
+        h1{
+            border-bottom: black 2px solid;
+            padding: 20px;
+            margin:0px;
+        }
+    </style>
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
