--- a/2.html
+++ b/2.html
@@ -11,12 +11,29 @@
 </script>
     <title>WEB1 - CSS</title>
     <meta charset="utf-8"> <!--한글깨질때 쓰는 tag-->
+    <!--id의 property는 한번씩만 등장-->
+    <style>
+        #active{
+            color: red;
+            text-decoration: underline;
+        }
+
+        .saw{
+            color:gray;
+        }
+
+        a{
+            color:black;
+            text-decoration: none;
+        }
+        /* 선택자 우선순위는 id>class>일반적인 tag */ /* css 안에서의 주석*/
+    </style> 
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
     <ol>
-        <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html">CSS</a></li>
+        <li><a href="1.html" class="saw">HTML</a></li>
+        <li><a href="2.html" class="saw 클래스네임" id="active">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
 
