--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
     <title>WEB1 - WelcomeDemo</title>
     <meta charset="utf-8"> <!--한글깨질때 쓰는 tag-->
     <style> 
-        a {color: skyblue;
-        }
+        a { color: skyblue;
+            text-decoration: none;}
+        ul {color: gray;}
+       h1 { text-align: center; font-size: 50px;
+            border-bottom: black 2px solid;
+            padding: 20px;
+            margin:0px;
+       }
+
     </style> <!--CSS쓰겠다는 html 태그: 이 안에선 CSS코드로 해석함 CSS를 한 곳에 몰아넣음으로써 정보만 볼수있다는 점, 중복 제거 등을 통한 효율 증대-->
 </head>
 <body>
 
-    <h1><a href="index.html">WEB</a></h1> 
-    <ol
+    <h1><a href="index.html" style="color: black; text-decoration: underline;">WEB</a></h1> 
+    <ol>
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
