--- a/1.html
+++ b/1.html
@@ -11,6 +11,8 @@
 </script>
     <title>WEB1 - html</title>
     <meta charset="utf-8"> <!--한글깨질때 쓰는 tag-->
+    <link rel="stylesheet" href="style.css">
+    <!--css 중복 없애는 효율 극대화 방법-->
     <style>
         h1{
             border-bottom: black 2px solid;
@@ -21,23 +23,26 @@
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
     <ol>
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
 
-    <ul>
-        <li>sam</li>
-    </ul>
-
+    <div>
     <h3>HTML</h3>
     <p><iframe width="560" height="315" src="https://www.youtube.com/embed/jSJM9iOiQ1g" frameborder="0" allowfullscreen></iframe></p>
     <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.
         Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. 
         HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
+    </div>
+</div>
     <br><br><br><br><strong>한글</strong>로 써볼게
 
+    <ul>
+        <li>sam</li>
+    </ul>
 
     <p style="margin-top:10px;">아 나 키보드 청소해야되는데</p>
     <!--단락paragraph 태그가 디자인을 더 자유롭게 설정할 수 있음-->
