--- a/2.html
+++ b/2.html
@@ -11,6 +11,7 @@
 </script>
     <title>WEB1 - CSS</title>
     <meta charset="utf-8"> <!--한글깨질때 쓰는 tag-->
+    <link rel="stylesheet" href="style.css">
     <!--id의 property는 한번씩만 등장-->
     <style>
         #active{
@@ -31,17 +32,20 @@
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
     <ol>
         <li><a href="1.html" class="saw">HTML</a></li>
         <li><a href="2.html" class="saw 클래스네임" id="active">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
-
+    <div>
+    <h3>CSS</h3>
+    <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language. Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.</p>
+</div>
+</div>
+    
     <ul>
         <li>cho</li>
         <li>sam</li>
     </ul>
-
-    <h3>CSS</h3>
-    <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language. Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.</p>
 </body>
